--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pytrends==4.8.0
 SQLAlchemy==1.4.35
 djangorestframework==3.13.1
 django-pandas==0.6.6
+django-celery-beat==1.5.0
+celery[redis]==4.4.1
+tzdata==2021.5
