--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ django-pandas==0.6.6
 django-celery-beat==1.5.0
 celery[redis]==4.4.1
 tzdata==2021.5
+dj-database-url==0.5.0
+psycopg2-binary==2.8.6
