--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,15 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      - name: Deploy
+      - name: Build and Deploy
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: dailytrend
         run: |
           IMAGE_TAG=$(echo ${{ github.sha }} | head -c 7)
           IMAGE_URL=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:${IMAGE_TAG}
+          docker build -t ${IMAGE_URL} .
+          docker push ${IMAGE_URL}
           sed -i"" -e 's,'IMAGE_URL','"${IMAGE_URL}"',' deployment.yaml
       - name: Trigger deploy
         uses: resemble-ai/kubernetes-action@master
